--- a/portfolio-1/css/main.css
+++ b/portfolio-1/css/main.css
@@ -1,6 +1,32 @@
+@import 'normalize.css';
+
+:root {
+  --text-color: #444;
+  --base-color: #fff;
+  --primary-color: red;
+  --secondary-color: orange;
+}
+
 /** BASE **/
 body {
   font-family: 'Poppins', sans-serif;
+  color: var(--text-color);
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  /* text-decoration: none; */
+  color: var(--text-color);
 }
 
 /** UTILITY **/
@@ -25,14 +51,86 @@ body {
 }
 
 .px-16 {
-  padding: 0 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.py-8 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.text-bold {
+  font-weight: bold;
 }
 
 /** CUSTOM **/
-ul {
-  list-style: none;
+.menu-toggle {
+  display: inline-block;
+  cursor: pointer;
 }
 
-li {
-  display: inline;
+.menu-options {
+  transition: 0.4s;
+}
+
+.menu-options li {
+  padding: 0 16px;
+}
+
+/* hide the menu toggle icon on tablet sized devices and up */
+@media screen and (min-width: 554px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+/* hide the menu options on any device smaller than a tablet */
+@media screen and (max-width: 554px) {
+  .menu-options {
+    display: none;
+    opacity: 0;
+  }
+
+  .menu-options li {
+    padding: 20px 0 4px 0;
+  }
+
+  
+
+  .menu-options.active {
+    background-color: var(--base-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 50px;
+    opacity: 1;
+  }
+}
+
+.bar1, .bar2, .bar3 {
+  width: 25px;
+  height: 4px;
+  background-color: var(--text-color);
+  margin: 4px 0;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-6px, 6px) ;
+  transform: rotate(-45deg) translate(-6px, 6px) ;
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+  opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-5px, -6px) ;
+  transform: rotate(45deg) translate(-5px, -6px) ;
 }
