--- a/portfolio-1/css/main.css
+++ b/portfolio-1/css/main.css
@@ -23,8 +23,24 @@ ul {
 
 a {
   color: var(--text-color);
+  text-decoration: none;
+  transition: transform .6s;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
+a:hover {
+  color: var(--primary-color);
+}
+
+.social-details li a img {
+  width: 1em;
+  height: 1em;
+}
+.topbar{
+  display: flex;
+
+}
 /** UTILITY **/
 .flex {
   display: flex;
@@ -81,6 +97,12 @@ a {
 }
 
 /** CUSTOM **/
+
+.fullname {
+  font-size: 24px;
+  font-weight: 400;
+}
+
 .menu-toggle {
   display: inline-block;
   cursor: pointer;
@@ -110,6 +132,9 @@ a {
     background-color: var(--base-color);
   }
 
+  .social-container{
+    display: none;
+  }
   .menu-options li {
     padding: 20px 0 4px 0;
   }
@@ -199,18 +224,33 @@ a {
 
 .social-details {
   display: flex;
+  transition: transform .5s;
 }
 
 .social-details li {
   padding: 0 16px;
 }
 
-.social-details li:first-child {
-  padding-left: 0;
+.social-details li:hover {
+  transition: transform .2s;
+  transform: scale(1.3);
 }
 
-.topbar {
+/* .social-details li:first-child {
+  padding-left: 0;
+} */
+
+
+.topbar{
   background-color: var(--base-color);
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: 1fr 1fr;
+
+}
+
+.fullname{
+  grid-row: span 2;
 }
 
 section {
