--- a/portfolio-1/css/main.css
+++ b/portfolio-1/css/main.css
@@ -12,7 +12,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
-  background-color: var(--accent-color);
+  background-color: var(--base-color);
 }
 
 ul {
